--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <h1>Server is sleeping 💤</h1>
       <p>Come back tomorrow at 8:00 for more python fun!</p>
 	  <a href="https://www.youtube.com/watch?v=KZeIEiBrT_w">In the meantime, watch this video!</a>
+	  <br>
+	  <h2> If its still daytime the server might be down for a quick restart and should be back up soon!</h2>
 			`;
 			return;
 		}
