--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p>Come back tomorrow at 8:00 for more python fun!</p>
 	  <a href="https://www.youtube.com/watch?v=KZeIEiBrT_w">In the meantime, watch this video!</a>
 	  <br>
-	  <h2> If its still daytime the server might be down for a quick restart and should be back up soon!</h2>
+	  <p>If its still daytime the server might be down for a quick restart and should be back up soon!</p>
 			`;
 			return;
 		}
